--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-Hello World
+
+<!DOCTYPE html>
+
+<html lang="de" itemscope itemtype="http://schema.org/Person">
+    <meta charset="utf-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Digitale Visitenkarte von Dieter Föttinger." />
+
+    <meta itemprop="url" content="https://sherpadee.github.io" />
+    <meta itemprop="name" content="Dieter Föttinger — das bin ich!" />
+    <meta itemprop="description" content="Digitale Visitenkarte von Dieter Föttinger." />
+
+    <link href="https://sherpadee.github.io" rel="canonical" />
+    <link href="fonts/roboto-slab.woff2" rel="preload" crossorigin="anonymous" as="font" type="font/woff2" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@translate3d" />
+    <meta name="twitter:title" content="Dieter Föttinger— that's me!" />
+    <meta name="twitter:description" content="Digitale Visitenkarte von Dieter Föttinger." />
+
+    <title>Dieter Föttinger — das bin ich!</title>
+
+    <style>
+        @font-face {
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 300;
+            src: url('fonts/roboto-slab.woff2') format('woff2'),
+                 url('fonts/roboto-slab.woff') format('woff');
+        }
+        * {
+            border: 0;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            color: #675741;
+            font: 14px/28px Roboto, serif;
+        }
+        html {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+        }
+        body {
+            top: 50%;
+            position: relative;
+            -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+        }
+        img {
+            width: 300px;
+            height: 300px;
+        }
+        h1 {
+            margin: 16px 0 0;
+            font-size: 28px;
+            line-height: 48px;
+        }
+        p {
+            margin: 0 0 12px;
+        }
+        a,
+        span {
+            margin: 0 6px;
+        }
+        a {
+            color: rgb(73, 153, 97);
+            text-decoration: none;
+        }
+    </style>
+
+
+    <body>
+        <img src="img/sherpadee.svg" alt="Dieter Föttinger" itemprop="image" />
+
+        <h1 itemprop="name">
+          Dieter Föttinger
+        </h1>
+
+        <p>
+            <span>Softwareentwickler</span>
+        </p>
+
+        <nav>
+            <a href="https://twitter.com/vjdeedee" itemprop="sameAs">Twitter</a>
+            <a href="https://github.com/sherpadee" itemprop="sameAs">GitHub</a>
+            <br />
+            <a href="https://www.paypal.me/sherpadee" itemprop="sameAs">PayPal</a>
+        </nav>
+    </body>
+</html>
