--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 
         <nav>
             <a href="https://twitter.com/vjdeedee" itemprop="sameAs">Twitter</a>
+            <a href="https://www.instagram.com/sherpadee/" itemprop="sameAs">Instagram</a>
+            <a href="https://www.facebook.com/sherpadee" itemprop="sameAs">Facebook</a>
             <a href="https://github.com/sherpadee" itemprop="sameAs">GitHub</a>
             <br />
             <a href="https://www.paypal.me/sherpadee" itemprop="sameAs">PayPal</a>
